--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
+ section {
+  background: white;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15); /* stronger shadow */
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  color: #333;
+}
 body {
   font-family: Arial, sans-serif;
+  line-height: 1.6;
   margin: 0;
-  padding: 40px;
-  background-color: #f8f8f8;
+  padding: 20px;
+  background-color: #f4f4f4;
   color: #333;
 }
 
@@ -15,13 +24,6 @@ header {
   margin-bottom: 40px;
 }
 
-section {
-  background: white;
-  padding: 20px;
-  margin-bottom: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-}
 
 a {
   color: #2a7ae2;
@@ -30,3 +32,31 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+body.dark-mode{
+  background-color: black;
+  color: white;
+}
+
+body.dark-mode section {
+  background: #383838;
+  color: white;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+
+}
+
+ #mode-toggle {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 6px;
+  background-color: #383838;
+  color: white;
+  cursor: pointer;
+  z-index: 1000; 
+ }
